update team data

--- a/_data/team.yml
+++ b/_data/team.yml
@@ -231,7 +231,7 @@
   profile_path: /company/about/#josh-dorothy
   image: /img/people/josh-dorothy.jpg
   image_description: Photo of Josh Dorothy
-  position: DevOps Engineer
+  position: Chief Information Officer
   bio: >
     Josh's a former member of the U.S. Digital Service, with an interest in building
     both great platforms and great products. He specializes in DevOps engineering,
@@ -1643,7 +1643,7 @@
   profile_path: /company/about/#chris-smith
   image: /img/people/chris-smith.png
   image_description: Illustration of Chris Smith
-  position: Digital Transformer
+  position: Chief Operating Officer
   bio: >
     Chris' an experienced executive with nearly 20 years of leading technology
     consulting and delivery teams in support of government clients. He lives in Maryland.
