update team data

--- a/_data/team.yml
+++ b/_data/team.yml
@@ -300,7 +300,7 @@
   profile_path: /company/about/#victor-zapanta
   image: /img/people/victor-zapanta.jpg
   image_description: Photo of Victor Zapanta
-  position: UX Designer
+  position: Research & Design Practice Area Lead
   bio: >
     Victor co-founded the Consumer Financial Protection Bureau's Design+Tech team,
     and served as a member of 18F. His design leadership spans multiple high-profile
