--- a/_data/team.yml
+++ b/_data/team.yml
@@ -1818,7 +1818,7 @@
   position: Product Manager Apprentice
   bio: >
    Derek's a product manager apprentice who's excited for the opportunity to use modern
-   technological practices into public-facing work. He's a 2020 Civic Digital Fellow in
+   technological practices in public-facing work. He's a 2020 Civic Digital Fellow in
    the General Services Administration working on Vote.gov. He's recently graduated with a
    degree in Systems Engineering from the University of Illinois at Urbana-Champaign.
    Derek lives in Massachusetts.
