add case studies

--- a/_data/filters.yml
+++ b/_data/filters.yml
@@ -29,6 +29,7 @@ mission_areas:
   - Economic Development
   - Defense
   - Air Force
+  - Space Force
   - Navy
   - Homeland Security
   - Citizenship & Immigration
