--- a/_data/values.yml
+++ b/_data/values.yml
@@ -1,88 +1,59 @@
 - title: Deliver joyful client experiences.
   statement: >
-    Client service isn't simply about complying with a contract. It's about delivering joy.
-    We do this by designing engaging experiences, constructing meaningful and memorable interactions,
-    facilitating the discovery of new and profound insights, imparting mastery of new competencies,
-    delivering transparent value toward the realization of important goals, and doing the little things well.
+    Our clients have dedicated their lives to serving the public and creating better
+    outcomes for citizens. They deserve our admiration. For us, that means client service
+    isn't simply about complying with a contract. It's about delivering joy. We design
+    engaging experiences, construct meaningful and memorable interactions, facilitate
+    the discovery of new and profound insights, impart mastery of new competencies,
+    and do the little things well.
   order: 10
-- title: Remember whom we serve.
+- title: Hire great people.
   statement: >
-    We serve the people who've dedicated their lives to serving the public and
-    creating better outcomes for citizens. Their missions are hard, complex, and admirable.
-    They deserve our humility, empathy, objectivity, dedication, and reliable effort.
+    We believe in the power of first-rate colleagues. Therefore, hiring is the most important
+    thing we do. We look for passion, emotional intelligence, attitude, character, growth potential,
+    and skill. It's pretty simple: Great people do great things for our clients, build a great
+    company culture, and attract other great people.
   order: 20
-- title: Hire and empower great people.
+- title: Unleash the full potential of our people.
   statement: >
-    We believe in the power of first-rate colleagues. Therefore, hiring is the
-    most important thing we do. We look for passion, emotional intelligence, attitude,
-    character, growth potential, and skill. Then, we let great people do great things for our clients.
+    We believe a culture of learning and development brings out the highest levels of performance
+    &mdash; both individually and organizationally. We apply design thinking to the employee experience
+    to make worklife simple, flexible, enjoyable, and productive. We uphold a simple,
+    unbureaucratic business model that makes our organization as capable as the people who
+    work within it. In sum, we empower you to reach your full potential and unleash your skills
+    for public good.
   order: 30
-- title: Develop our people into stars.
-  statement: >
-    We believe a culture of development not only promotes star formation, but also
-    contributes to the overall strength of the organization. Development activities
-    (for example, coaching and peer mentoring) are woven into the normal, day-to-day operations.
-  order: 40
-- title: Design an engaging employee experience.
-  statement: >
-    Employees are people, too. We apply design thinking to the employee experience
-    to make worklife simple, flexible, enjoyable, and productive.
-  order: 50
 - title: Reward results, not activity.
   statement: >
-    We value delivery on client work, contributions to the company, personal and professional
-    growth, and helping each other out above all else. We employ a performance system
-    that's fair, clear, and objective to measure results.
-  order: 60
-- title: Collaborate for the win.
-  statement: >
-    The best ideas and solutions don't emerge from a one-person band,
-    but rather from diverse teams of specialists who share knowledge,
-    workload and sense of purpose, communicate openly, and trust each other.
-    We actively foster the right conditions for collaboration to emerge, sparking
-    insight and innovation.
-  order: 70
-- title: Give credit where it's due.
-  statement: >
-    Collaboration and innovation flourish in environments that fully recognize
-    people's unique ideas and contributions. We go out of our way to acknowledge the
-    original source, not just the most recent or loudest contributor.
-  order: 80
+    We value delivery on client work, contributions to the company, personal and professional growth,
+    and helping each other out above all else. We employ a performance system that's fair, clear,
+    and objective to measure results. Collaboration and innovation flourish in environments that
+    fully recognize people's unique ideas and contributions. We go out of our way to acknowledge
+    the original source, not just the most recent or loudest contributor.
+  order: 40
 - title: Change for the better &mdash; every day.
   statement: >
-    Big results come from small changes accumulated over time. We foster environments where everyone proactively works together to achieve regular,
-    incremental improvements to the organization.
-  order: 90
+    Big results come from small changes accumulated over time. We foster collaborative environments
+    where everyone proactively works together to achieve regular, incremental improvements to the
+    organization.
+  order: 50
 - title: Pursue modern ways of working.
   statement: >
     New trends and technologies are constantly on the horizon. We embrace &mdash; even pioneer &mdash;
     new developments, go deep to understand their viability and impact, and harness those
     with the greatest promise to the benefit of our clients and employees.
-  order: 100
-- title: Uphold a simple, unbureaucratic business model.
-  statement: >
-    Bureaucracy makes organizations inertial, incremental, uninspiring, and wasteful.
-    It gets in the way of delivering great experiences and superior value to clients.
-    We uphold an organization &mdash; both architecturally and ideologically &mdash; that makes
-    it as fully capable as the people who work within it.
-  order: 110
-- title: Exercise pragmatic transparency.
-  statement: >
-    Transparency is about clarity around the things that are important, not all things.
-    We believe a system of transparency &mdash; that strikes the right balance with the need for
-    individual and team privacy &mdash; reveals truth, builds trust, promotes collaboration,
-    encourages authentic behavior, roots-out wasteful practices, and drives high levels of performance.
-  order: 120
+  order: 60
 - title: Excel ethically.
   statement: >
-    Ethics reduced to "check-the-box" compliance programs, and statements of
-    negative choices to avoid, often create the illusion of reducing risk and can
-    even stunt innovation. We focus on positive organizational and classical virtues,
-    reinforcing how people should exhibit these through social processes.
-  order: 130
+    Ethics looks like doing the right thing when it's hard. We don't reduce ethics to "check-the-box"
+    compliance programs. We believe in a system of transparency that strikes the right balance
+    between individual and team privacy to build trust, encourage authentic behavior, and drive
+    high levels of performance. We reinforce positive organizational behavior through incentives,
+    not penalties.
+  order: 70
 - title: Give back.
   statement: >
-    Giving back strengthens our communities, brings people together, provides us valuable
-    experience, and makes us more engaged in our work. Giving back takes many forms from volunteering
-    to sharing our collective knowledge.
-  order: 140
+    Giving back strengthens our communities, brings people together, provides us valuable experience,
+    and makes us more engaged in our work. Giving back takes many forms from volunteering to
+    sharing our collective knowledge.
+  order: 80
