edit profile data

--- a/_data/team.yml
+++ b/_data/team.yml
@@ -1837,9 +1837,9 @@
   fname: Leslie
   lname: Garner Franklin
   full_name: Leslie Garner Franklin
-  short_name: Leslie Garner Franklin
+  short_name: L. Garner Franklin
   profile_path: /company/about/#leslie-garner-franklin
-  image: /img/people/leslie-garnerfranklin.png
+  image: /img/people/leslie-garner-franklin.png
   image_description: Illustration of Leslie Garner Franklin
   position: Product Manager
   bio: >
