--- a/_data/team.yml
+++ b/_data/team.yml
@@ -1743,7 +1743,7 @@
   profile_path: /company/about/#gianna-uson
   image: /img/people/gianna-uson.png
   image_description: Illustration of Gianna Uson
-  position: Software Engineer Apprentice
+  position: Software Engineer
   bio: >
     Gianna's a software engineer who's passionate about leveraging technology
     and partnering with communities to improve the lives of others. She was a 2018 Civic Digital
