--- a/_data/team.yml
+++ b/_data/team.yml
@@ -699,7 +699,7 @@
     coaching, mentoring, and technical excellence. He specializes in software engineering,
     APIs, DevSecOps, cloud computing, data engineering, and data science.
     Gabriel lives in Texas.
-  active: true
+  active: false
   order: 90
   socials:
     - name: Twitter
@@ -763,7 +763,7 @@
     such as login.gov, analytics.usa.gov, everykidinapark.gov, and FBI Crime Data Explorer.
     He specializes in software engineering, APIs, DevOps, and data engineering.
     Colin lives in North Carolina.
-  active: true
+  active: false
   order: 170
   socials:
     - name: LinkedIn
@@ -938,7 +938,7 @@
     and marketing. Amelia led digital transformation initiatives at the NYC
     Mayor's Office for Economic Opportunity and the Cambridge Innovation Center.
     She lives in New York.
-  active: true
+  active: false
   order: 175
   socials:
     - name: Twitter
@@ -1389,7 +1389,7 @@
     worked for the Massachusetts Data Office, and was in the inaugural class of
     the University of Chicago's Computational Analysis & Public Policy program.
     Kyle lives in Massachusetts.
-  active: true
+  active: false
   order: 340
   socials:
     - name: Twitter
@@ -1771,7 +1771,7 @@
     He was 2019 Civic Digital Fellow at the U.S. Department of Health and
     Human Services. Alex graduated with degrees from Columbia University and
     New York University. He lives in Massachusetts.
-  active: true
+  active: false
   order: 480
   socials:
     - name: LinkedIn
