update quote style to curly

--- a/_data/values.yml
+++ b/_data/values.yml
@@ -2,7 +2,7 @@
   statement: >
     Our clients have dedicated their lives to serving the public and creating better
     outcomes for citizens. They deserve our admiration. For us, that means client service
-    isn't simply about complying with a contract. It's about delivering joy. We design
+    isn’t simply about complying with a contract. It’s about delivering joy. We design
     engaging experiences, construct meaningful and memorable interactions, facilitate
     the discovery of new and profound insights, impart mastery of new competencies,
     and do the little things well.
@@ -11,7 +11,7 @@
   statement: >
     We believe in the power of first-rate colleagues. Therefore, hiring is the most important
     thing we do. We look for passion, emotional intelligence, attitude, character, growth potential,
-    and skill. It's pretty simple: Great people do great things for our clients, build a great
+    and skill. It’s pretty simple: Great people do great things for our clients, build a great
     company culture, and attract other great people.
   order: 20
 - title: Unleash the full potential of our people.
@@ -26,9 +26,9 @@
 - title: Reward results, not activity.
   statement: >
     We value delivery on client work, contributions to the company, personal and professional growth,
-    and helping each other out above all else. We employ a performance system that's fair, clear,
+    and helping each other out above all else. We employ a performance system that’s fair, clear,
     and objective to measure results. Collaboration and innovation flourish in environments that
-    fully recognize people's unique ideas and contributions. We go out of our way to acknowledge
+    fully recognize people’s unique ideas and contributions. We go out of our way to acknowledge
     the original source, not just the most recent or loudest contributor.
   order: 40
 - title: Change for the better &mdash; every day.
@@ -45,7 +45,7 @@
   order: 60
 - title: Excel ethically.
   statement: >
-    Ethics looks like doing the right thing when it's hard. We don't reduce ethics to "check-the-box"
+    Ethics looks like doing the right thing when it’s hard. We don’t reduce ethics to "check-the-box"
     compliance programs. We believe in a system of transparency that strikes the right balance
     between individual and team privacy to build trust, encourage authentic behavior, and drive
     high levels of performance. We reinforce positive organizational behavior through incentives,
